# edgar-mcp

./: .gitignore  .secrets.baseline  CLAUDE.md  README.md  pyproject.toml  server.json
mcpb/: README.md  build.sh  manifest.json
src/edgar_mcp/: __init__.py  cache.py  edgar_client.py  formatting.py  formc.py  formd.py  forms345.py  htmltext.py  issuers.py  models.py  server.py  xbrl.py  xmlutil.py
tests/: conftest.py  test_cache.py  test_edgar_client.py  test_filing_text.py  test_formc.py  test_formd.py  test_forms345.py  test_tools.py  test_xbrl.py  test_xmlutil.py
